add head.html include to page template

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,5 +1,5 @@
 
-
+{% include head.html %}
 <body class='http://www.shamayoga.org.uk/'>
 <div id='wrapper'>
 <!-- Sidebar -->
@@ -26,9 +26,6 @@
 <div id='page-content-wrapper'>
 
     {{ content }}   
-      
-
-
 
 <!-- END Container -->
 </div>
