add site.url to _config

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,5 +16,5 @@
 <meta content='http://www.shamayoga.org.uk/' property='og:url'/>
 <meta content='shamayoga' property='og:title'/>
 <meta content='' property='og:description'/>
-<link rel="stylesheet" href="css/styles.css">
+<link rel="stylesheet" href="{{ site.url }}/css/styles.css">
 </head>
