--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,24 +3,7 @@
 <body class='http://www.shamayoga.org.uk/'>
 <div id='wrapper'>
 <!-- Sidebar -->
-<div id='sidebar-wrapper'>
-<img src='//lh3.googleusercontent.com/-m-ps-HTMaPA/VXvWJgrgwWI/AAAAAAAAAcw/ytjryWMzUGs/s254/AvianLogoBluesml.jpg'/><br/>
-<!-- sidebar -->
-<ul class='sidebar-nav'>
-<li class='sidebar-brand'><a href='/'><img src='//lh3.googleusercontent.com/-VVq1Y-FFG9g/VX27FPwKmhI/AAAAAAAAAeE/N0Kv79ld2ZA/s160/shamskranjiblue.png'/></a>
-</li>
-{% for nav in site.data.main-nav %}
-   <li><a href="{{ site.url }}{{ nav.link }}">{{ nav.name }}</a></li>
-    {% if nav.submenu != null %}
-    <ul class="sub-menu">
-        {% for item in nav.submenu %}
-        <li><a href="{{ site.url }}{{ item.sublink }}">{{ item.subname }}</a></li>
-        {% endfor %}
-    </ul>
-    {% endif %}
-{% endfor %}
-</ul>
-</div>
+{% include sidebar-nav.html %}
 <!-- END Sidebar -->
 <!-- Page content -->
 <div id="page-content-wrapper">
