--- a/css/styles.css
+++ b/css/styles.css
@@ -5199,6 +5199,7 @@ padding-left:14px;
     .photo-right{float:right;}
     .photo-tutor{float:left;padding:0px 10px 10px 0px;}
     .sidebar-nav{margin-top:240px;}
+    .sub-menu{list-style: none;}
     .gallery-container{text-align:center;}
     .gallery-image{padding:20px; border:1px solid #cccccc;}
     .gallery-caption{font-size:0.75em;color:black;padding:3px; font-family: Times;}
