--- a/css/styles.css
+++ b/css/styles.css
@@ -5197,7 +5197,7 @@ padding-left:14px;
 }
 /* START SHAMA STYLEY */
     .photo-right{float:right;}
-    .photo-left{float:left;}
+    .photo-left{float:left; padding: 20px;}
     .photo-tutor{float:left;padding:0px 10px 10px 0px;}
     .sidebar-nav{margin-top:240px;}
     .sub-menu{list-style: none;}
