--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -23,7 +23,7 @@
     <!--<h1 class='post-title entry-title'>Shamayoga School</h1> <div class='post-header'> </div>-->
     <div class="top section" id="top"><div class="widget HTML" data-version="1" id="HTML1">
     <div class="widget-content">
-    {% include testimonials.html %}
+    {{ content }}
     </div>
     </div></div>
     </div>
