Updated '_includes/testimonials.html' via CloudCannon

--- a/_includes/testimonials.html
+++ b/_includes/testimonials.html
@@ -1,4 +1,4 @@
     {% for testimonial in site.data.testimonials %}
-       <div>{{ testimonial.testimony }}
+       <div>{{ testimonial.testimony }}<br>
        <span class="testimonial-name">{{ testimonial.student }}</span></div>
     {% endfor %}
