--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body#layout #feature  {display:none;}
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, fieldset, form, label, legend, caption {margin: 0; padding: 0; border: 0; outline: 0; font-size: 100%; vertical-align: baseline; background: transparent;}
 body, .body-fauxcolumn-outer {line-height: 1;}
-blockquote, q {quotes: none;}
+blockquote, q {quotes: none;}te
 blockquote:before, blockquote:after, q:before, q:after {content: ''; content: none;}
 :focus {outline: 0;}
 ins  {text-decoration: none;}
@@ -86,7 +86,7 @@ margin-bottom: 10px;
 .post h4{padding: 10px 0px; font-size: 22px; font-weight: normal; color: #333;}
 .post h5{padding: 10px 0px; font-size: 18px; font-weight: normal; color: #666;}
 .post h6 {padding: 10px 0px; font-size: 16px; font-weight: normal; color: #666;}
-.post blockquote {display: block; margin: 20px; padding: 0px 30px; font-style: italic; color: #999;}
+.post blockquote {display: block; padding: 0px 30px; font-style: italic; color: #999;}
 .left{padding:20px 25px 0px 0px;width:300px;float:right;}
 .sidebar h2{padding: 10px;
 color: #222222;
@@ -5205,7 +5205,7 @@ padding-left:14px;
     .gallery-image{padding:20px; border:1px solid #cccccc;}
     .gallery-caption{font-size:0.75em;color:black;padding:3px; font-family: Times;}
     .testimonial{colo}
-    .testimonial-name{color:#000;padding-top:12px;}
+    .testimonial-name{display:block;color:#000;}
 	blockquote footer{display: block;font-size: 80%;line-height: 1.42857143;color: #999;}
     blockquote footer:before{content: '\2014 \00A0';}
 #sidebar-wrapper::-webkit-scrollbar {width: 10px;height: 6px;}
