--- a/_includes/testimonials.html
+++ b/_includes/testimonials.html
@@ -1,4 +1,4 @@
     {% for testimonial in site.data.testimonials %}
-       <blockquote class="testimonial">{{ testimonial.testimony }}</blockquote>
-       <span class="testimonial-name">{{ testimonial.student }}</span><br>
+       <blockquote class="testimonial">{{ testimonial.testimony }}<span class="testimonial-name">{{ testimonial.student }}</span></blockquote>
+       <br>
     {% endfor %}
