--- a/css/styles.css
+++ b/css/styles.css
@@ -86,6 +86,14 @@ margin-bottom: 10px;
 .post h4{padding: 10px 0px; font-size: 22px; font-weight: normal; color: #333;}
 .post h5{padding: 10px 0px; font-size: 18px; font-weight: normal; color: #666;}
 .post h6 {padding: 10px 0px; font-size: 16px; font-weight: normal; color: #666;}
+.post blockquote:before {
+  color: #000;
+  content: open-quote;
+  font-size: 4em;
+  line-height: 0.1em;
+  margin-right: 0.25em;
+  vertical-align: -0.4em;
+}
 .post blockquote {display: block; padding: 0px 30px; font-style: italic; color: #999;}
 .left{padding:20px 25px 0px 0px;width:300px;float:right;}
 .sidebar h2{padding: 10px;
