--- a/css/styles.css
+++ b/css/styles.css
@@ -86,7 +86,7 @@ margin-bottom: 10px;
 .post h4{padding: 10px 0px; font-size: 22px; font-weight: normal; color: #333;}
 .post h5{padding: 10px 0px; font-size: 18px; font-weight: normal; color: #666;}
 .post h6 {padding: 10px 0px; font-size: 16px; font-weight: normal; color: #666;}
-.post blockquote:before {
+.blockquote:before {
   color: #000;
   content: '"';
   font-size: 4em;
