--- a/css/styles.css
+++ b/css/styles.css
@@ -5216,7 +5216,7 @@ padding-left:14px;
     .testimonial-name{display:block;color:#000;}
 	blockquote footer{display: block;font-size: 80%;line-height: 1.42857143;color: #999;}
     blockquote footer::before{content: '\2014 \00A0';}
-    .download {background: #eee;display: block;padding: 10px;width: 240px;}
+    .download {background: #eee;display: block;padding: 10px;min-width: 240px;}
     .download::after{content: ' \2193';}
 #sidebar-wrapper::-webkit-scrollbar {width: 10px;height: 6px;}
 #sidebar-wrapper::-webkit-scrollbar-button:start:decrement,#sidebar-wrapper::-webkit-scrollbar-button:end:increment {height: 8px;display: block;background-color: transparent;}
