--- a/css/styles.css
+++ b/css/styles.css
@@ -5216,7 +5216,9 @@ padding-left:14px;
     .testimonial-name{display:block;color:#000;}
 	blockquote footer{display: block;font-size: 80%;line-height: 1.42857143;color: #999;}
     blockquote footer::before{content: '\2014 \00A0';}
-    .download {background: #eee;display: block;padding: 10px;min-width: 240px;max-width: 40%;}
+    .download {background: #eee;padding: 10px;min-width: 240px;max-width: 300px;margin-right: 10px; display: inline-block;border-radius: 10px;}
+    /*.download img{width:32px; height:32px;}*/
+    .download::before{content: url('../../assets/pdf.svg');width:24px; height:24px;vertical-align: top;padding-right:10px;}
     .download::after{content: ' \2193';font-weight: 900;font-size: 1.6em;}
     .pdf-icon{width: 32px; height:32px;}
 #sidebar-wrapper::-webkit-scrollbar {width: 10px;height: 6px;}
