--- a/_layouts/gallery_page.html
+++ b/_layouts/gallery_page.html
@@ -24,8 +24,8 @@
     <div class="top section" id="top"><div class="widget HTML" data-version="1" id="HTML1">
     <div class="widget-content">
     <div id="grid">
-        {% for image in page.images %}
-         <img class="grig-image" src="{{ image.image }}"/>
+        {% for gimage in page.gallery_images %}
+         <img class="grid-image" src="{{ gimage.image }}"/>
         {% endfor %}
     </div>
     </div>
