--- a/css/styles.css
+++ b/css/styles.css
@@ -5112,8 +5112,7 @@ th.hidden-print, td.hidden-print {
 }
 
 .sidebar-nav li {
-  line-height: 25px;
-  text-indent: 20px;
+  text-indent: 10px;
 }
 
 .sub-menu{
@@ -5121,11 +5120,11 @@ list-style: none;
     }
 
 .sidebar-nav li a {
-  text-shadow: 1px 1px #fff;
-  color: #999;
+  color: #fff;
   display: block;
   text-decoration: none;
   font-size: 1.4em;
+  line-height: 1.6em;
 }
 
 .sidebar-nav li a:hover {
