--- a/_includes/sidebar-nav.html
+++ b/_includes/sidebar-nav.html
@@ -1,5 +1,5 @@
 <div id='sidebar-wrapper'>
-    <img src='//lh3.googleusercontent.com/-m-ps-HTMaPA/VXvWJgrgwWI/AAAAAAAAAcw/ytjryWMzUGs/s254/AvianLogoBluesml.jpg'/><br/>
+    <!--<img src='//lh3.googleusercontent.com/-m-ps-HTMaPA/VXvWJgrgwWI/AAAAAAAAAcw/ytjryWMzUGs/s254/AvianLogoBluesml.jpg'/><br/> -->
     <!-- sidebar -->
     <ul class='sidebar-nav'>
     <li class='sidebar-brand'><a href='/'><img src='//lh3.googleusercontent.com/-VVq1Y-FFG9g/VX27FPwKmhI/AAAAAAAAAeE/N0Kv79ld2ZA/s160/shamskranjiblue.png'/></a>
