--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -68,6 +68,11 @@
         }
         @media only screen and (max-width: 320px) {
             .list li div{font-size: 12px;}
+            #open-nav{
+                font-size: 36px;
+                left: 12px;
+                top: 12px;
+            }
             }
         </style>
 <header role="banner">
