--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -66,13 +66,16 @@
         .list li div{font-size: 11px;}
         .top{top:77%;}
         }
+        @media only screen and (max-width: 360px) {
+        #open-nav{
+            font-size: 36px;
+            left: 12px;
+            top: 12px;
+        }
+    }
         @media only screen and (max-width: 320px) {
             .list li div{font-size: 12px;}
-            #open-nav{
-                font-size: 36px;
-                left: 12px;
-                top: 12px;
-            }
+
             }
         </style>
 <header role="banner">
