open-nav on smaller screens

--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -58,6 +58,7 @@
         #logo a{
             color: rgb(20, 29, 210);
             text-decoration:none;
+            font-weight:bold;
         }
 
 
