--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,5 +16,6 @@
 <meta content='http://www.shamayoga.org.uk/' property='og:url'/>
 <meta content='shamayoga' property='og:title'/>
 <meta content='' property='og:description'/>
+<link href="https://fonts.googleapis.com/css?family=Skranji:400,700" rel="stylesheet"> 
 <link rel="stylesheet" href="{{ site.url }}/css/styles.css">
 </head>
