--- a/_includes/overlay-nav.html
+++ b/_includes/overlay-nav.html
@@ -7,8 +7,8 @@
             z-index: 1;
             top: 0;
             left: 0;
-            background-color: rgb(20, 29, 210);
-            background-color: rgba(20, 29, 210, 0.9);
+            background-color: rgbrgb(233, 149, 22);
+            background-color: rgba(233, 149, 22, 0.9);
             overflow-y: hidden;
             transition: 0.5s;
         }
