--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -1,5 +1,5 @@
 {% include head.html %}
-<body class='home-page' style="background-image:url(https://i.pinimg.com/736x/7b/9d/29/7b9d29dbdc91bf6f417d986ceca1467f--indian-embroidery-designs-embroidery-patterns.jpg);background-size:cover;">
+<body class='home-page' style="background-image:url(https://lh3.googleusercontent.com/-VWKPXA9Z7Po/WxqVs41GsYI/AAAAAAAAA-w/6I_vuF0V4_MxiX0E-rXUiy-F3FgbrQJ_wCJoC/s0-e30/swirls.jpg);background-size:cover;">
     <style>
 
         a{text-decoration:none;}
