--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -1,5 +1,5 @@
 {% include head.html %}
-<body class='home-page' style="background-image:url(https://lh3.googleusercontent.com/-VWKPXA9Z7Po/WxqVs41GsYI/AAAAAAAAA-w/6I_vuF0V4_MxiX0E-rXUiy-F3FgbrQJ_wCJoC/s0-e30/swirls.jpg);background-size:cover;">
+<body class='home-page' style="background-color:#bf2024;xbackground-image:url(https://lh3.googleusercontent.com/-VWKPXA9Z7Po/WxqVs41GsYI/AAAAAAAAA-w/6I_vuF0V4_MxiX0E-rXUiy-F3FgbrQJ_wCJoC/s0-e30/swirls.jpg);background-size:cover;">
     <style>
 
         a{text-decoration:none;}
@@ -8,7 +8,7 @@
         padding-left: 0;
         list-style: none;
         display: grid;
-        grid-gap: 8px;
+        grid-gap: 24px;
         grid-template-columns: 1fr 1fr 1fr;
         }
           .circle {
@@ -27,15 +27,14 @@
         .list li div{
         color: 	rgb(233, 149, 22)/*#150DD3*/;
         font-family: Arial, Helvetica, sans-serif;    
-        font-size: 18px;
+        font-size: 14px;
         text-align:center;
         font-weight: 800;
         position: absolute;
         width: 100%;
-        left: 0;/*17%;*/
-        bottom:0;
+
         background: rgba(255,255,255,0.75);
-        padding: 12px;
+        padding: 4px;
         xborder-radius: 50px 50px;
         }
 
