--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -59,8 +59,41 @@
             text-decoration:none;
             font-weight:bold;
         }
+        h1{margin-top:60px;text-align:center;}
+        #roots{
+            padding:24px;
+            -webkit-column-count: 2; /* Chrome, Safari, Opera */
+            -moz-column-count: 2; /* Firefox */
+            column-count: 2;
+            -webkit-column-gap: 40px; /* Chrome, Safari, Opera */
+            -moz-column-gap: 40px; /* Firefox */
+            column-gap: 40px;
+            font-size: 18px;
+        }
+        #shama-offer{
+            list-style: none;
+            display:grid;
+            grid-template-columns: 1fr 1fr ;
+            grid-gap: 24px;
+        }
 
+        #shama-offer li{
+            background-color: white;
+            border: 1px solid grey;
+            padding: 16px;
+        }
 
+        @media only screen and (max-width: 600px) {
+            #roots{
+                -webkit-column-count: 1; /* Chrome, Safari, Opera */
+                -moz-column-count: 1; /* Firefox */
+                column-count: 1;
+            }
+            #shama-offer{
+
+                grid-template-columns: 1fr 1fr;
+                grid-gap: 48px;
+            }
         @media only screen and (max-width: 480px) {
         .list{display:block;}
         .list li div{font-size: 11px;}
