grid for shama offer

--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -73,8 +73,10 @@
         #shama-offer{
             list-style: none;
             display:grid;
+            grid-auto-columns: minmax(10px, auto);
             grid-template-columns: 1fr 1fr ;
             grid-gap: 24px;
+            padding: 0px;
         }
 
         #shama-offer li{
