--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -1,5 +1,5 @@
 {% include head.html %}
-<body class='home-page' style="background-color:#bf2024;xbackground-image:url(https://lh3.googleusercontent.com/-VWKPXA9Z7Po/WxqVs41GsYI/AAAAAAAAA-w/6I_vuF0V4_MxiX0E-rXUiy-F3FgbrQJ_wCJoC/s0-e30/swirls.jpg);background-size:cover;">
+<body class='home-page' style="background-color:#ffc107;xbackground-image:url(https://lh3.googleusercontent.com/-VWKPXA9Z7Po/WxqVs41GsYI/AAAAAAAAA-w/6I_vuF0V4_MxiX0E-rXUiy-F3FgbrQJ_wCJoC/s0-e30/swirls.jpg);background-size:cover;">
     <style>
 
         a{text-decoration:none;}
@@ -76,14 +76,17 @@
             grid-auto-columns: minmax(10px, auto);
             grid-template-columns: 1fr 1fr ;
             grid-gap: 24px;
-            padding: 0px;
+            padding: 20px;
         }
 
         #shama-offer li{
-            background-color: white;
-            border: 1px solid grey;
+            background-color: rgba(255,255,255,0.75);
+            border: 3px solid #e99516;
             padding: 16px;
+            font-size: 24px;
+            font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
         }
+
 
         @media only screen and (max-width: 600px) {
             #roots{
