--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -49,7 +49,6 @@
         
         #open-nav {
             font-size: 42px;
-
             position: absolute;
             left: 45px;
             top: 20px;
@@ -59,11 +58,12 @@
             text-decoration:none;
             font-weight:bold;
         }
-        h1{margin-top:60px;text-align:center;
-            color:white;
-            text-shadow: -1px -1px white, 1px 1px #000;
+        h1{margin-top:20px;text-align:center;
+            color:rgb(233, 149, 22);
+            text-shadow: 1px 1px #000;
         }
         #roots{
+            margin-top:40px;
             padding:24px;
             -webkit-column-count: 2; /* Chrome, Safari, Opera */
             -moz-column-count: 2; /* Firefox */
@@ -71,9 +71,10 @@
             -webkit-column-gap: 40px; /* Chrome, Safari, Opera */
             -moz-column-gap: 40px; /* Firefox */
             column-gap: 40px;
-            font-size: 18px;
-            color:white;
-            text-shadow: -1px -1px white, 1px 1px #000;
+            font-size: 24px;
+            font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+            background-color: rgba(255,255,255,0.5);
+            border: 3px solid #e99516;
         }
         #shama-offer{
             list-style: none;
