lotus flower images in grid

--- a/_includes/overlay-nav.html
+++ b/_includes/overlay-nav.html
@@ -15,10 +15,10 @@
         
         .overlay-content {
             position: relative;
-            top: 25%;
+            top: 5%;
             width: 100%;
             text-align: center;
-            margin-top: 30px;
+            margin-top: 10px;
             list-style:none;
         }
         
@@ -58,8 +58,8 @@
     <!-- sidebar -->
     <ul class='overlay-content'>
      
-    <li class='sidebar-brand'><a href='/'><img src='//lh3.googleusercontent.com/-VVq1Y-FFG9g/VX27FPwKmhI/AAAAAAAAAeE/N0Kv79ld2ZA/s160/shamskranjiblue.png'/></a>
-    </li>
+   <!-- <li class='sidebar-brand'><a href='/'><img src='//lh3.googleusercontent.com/-VVq1Y-FFG9g/VX27FPwKmhI/AAAAAAAAAeE/N0Kv79ld2ZA/s160/shamskranjiblue.png'/></a>
+    </li>-->
     <li><a href="{{ site.url }}">home</a></li>
     {% for nav in site.data.main-nav %}
        <li><a href="{{ site.url }}{{ nav.link }}">{{ nav.name }}</a></li>
