--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -13,7 +13,7 @@
         }
           .circle {
             flex: 1;
-            background: #bada55;
+            background:none;
             position:relative;
             xborder-radius: 50%;
             margin: 5px;
@@ -92,6 +92,13 @@
             padding: 16px;
             font-size: 24px;
             font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        }
+        #shama-offer li::before{
+            content:url(img/lotus.svg);/*"☸";/*"ॐ";*/
+            font-size:60px;
+            text-align:center;
+            color:#e99516;
+            display: block;
         }
 
 
