--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -1,5 +1,5 @@
 {% include head.html %}
-<body class='home-page' style="background-color:#ffc107;background-image:url(https://www.hdwallpaper.nu/wp-content/uploads/2015/10/lotus_wallpaper_008.jpg );background-size:cover;">
+<body class='home-page' style="background-color:#ffc107;background-image:url(https://www.hdwallpaper.nu/wp-content/uploads/2015/10/lotus_wallpaper_008.jpg );xbackground-size:cover;">
     <!-- https://lh3.googleusercontent.com/-VWKPXA9Z7Po/WxqVs41GsYI/AAAAAAAAA-w/6I_vuF0V4_MxiX0E-rXUiy-F3FgbrQJ_wCJoC/s0-e30/swirls.jpg -->
     <style>
 
