blue background sun logo in boxes

--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -2,7 +2,8 @@
 <body class='home-page' ></body>
     <style>
 
-        .home-page{background-image:url(https://lh3.googleusercontent.com/-unZWJEV4FN4/Wx5VOFldD5I/AAAAAAAABB4/WIn-8Nt8FuYLPpSfRH2jIBPNgC-bKuZzgCJoC/w1000-e30/lotus_wallpaper.jpg );background-size:cover;}
+        .home-page{background-image:url(http://www.clipular.com/c/6340060367290368.png?k=YYCfRwH_c2CumZ7iAoOZ8uIqgjw);background-size:cover;}
+            /*url(https://lh3.googleusercontent.com/-unZWJEV4FN4/Wx5VOFldD5I/AAAAAAAABB4/WIn-8Nt8FuYLPpSfRH2jIBPNgC-bKuZzgCJoC/w1000-e30/lotus_wallpaper.jpg );background-size:cover;}*/
 
         a{text-decoration:none;}
 
@@ -73,9 +74,10 @@
             -webkit-column-gap: 40px; /* Chrome, Safari, Opera */
             -moz-column-gap: 40px; /* Firefox */
             column-gap: 40px;
-            font-size: 24px;
+            font-size: 18px;
+            color:white;
             font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-            background-color: rgba(255,255,255,0.5);
+            background-color: rgba(255,255,255,0.25);
             border: 3px solid #e99516;
         }
         #shama-offer{
@@ -83,21 +85,22 @@
             display:grid;
             grid-auto-columns: minmax(10px, auto);
             grid-template-columns: 1fr 1fr ;
-            grid-gap: 24px;
+            grid-gap: 32px;
             padding: 20px;
 
         }
 
         #shama-offer li{
-            background-color: rgba(255,255,255,0.75);
+            background-color: rgba(255,255,255,0.25);
             border: 3px solid #e99516;
-            padding: 16px;
-            font-size: 24px;
+            padding: 24px;
+            font-size: 18px;
+            color:white;
             font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
         }
         svg{fill:red;}
         #shama-offer li::before{
-            content:url(img/lotus.svg);/*"☸";/*"ॐ";*/
+            content:url(https://lh3.googleusercontent.com/-fGsnzRDk58Y/Wx6OaJMS2iI/AAAAAAAABG8/7v1D41VdLRgfvNgzyCxMV8itD8sar8K7ACJoC/s60-c-e30/sun.png);/*"☸";/*"ॐ";*/
             font-size:60px;
             text-align:center;
             color:#e99516;
@@ -105,7 +108,7 @@
         }
 
         @media only screen and (max-width: 768px) {
-            .home-page{background-image:url(https://lh3.googleusercontent.com/-unZWJEV4FN4/Wx5VOFldD5I/AAAAAAAABB4/WIn-8Nt8FuYLPpSfRH2jIBPNgC-bKuZzgCJoC/w500-h1200-p-e30/lotus_wallpaper.jpg );background-size:cover;}
+            .home-page{background-image:url(http://www.clipular.com/c/6340060367290368.png?k=YYCfRwH_c2CumZ7iAoOZ8uIqgjw);background-size:cover;}
         }
 
         @media only screen and (max-width: 600px) {
