--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -11,7 +11,8 @@
         padding-left: 0;
         list-style: none;
         display: grid;
-        grid-gap: 24px;
+        grid-column-gap: 24px;
+        grid-row-gap: 42px;
         grid-template-columns: 1fr 1fr 1fr;
         }
           .circle {
