--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -2,7 +2,9 @@
 <body class='home-page' ></body>
     <style>
 
-        .home-page{background-image:url(http://www.clipular.com/c/6340060367290368.png?k=YYCfRwH_c2CumZ7iAoOZ8uIqgjw);background-size:cover;}
+        .home-page{background-image:url(https://lh3.googleusercontent.com/-Gyj2TjNZPSM/Wx7ZPhObUfI/AAAAAAAABIQ/SJJMVF_OIo0Lo9nYSmMSL_QdaRfWwz9NwCJoC/w1200-e30/bluecloudsLighter.png);background-size:cover;}
+        
+        /*http://www.clipular.com/c/6340060367290368.png?k=YYCfRwH_c2CumZ7iAoOZ8uIqgjw */
             /*url(https://lh3.googleusercontent.com/-unZWJEV4FN4/Wx5VOFldD5I/AAAAAAAABB4/WIn-8Nt8FuYLPpSfRH2jIBPNgC-bKuZzgCJoC/w1000-e30/lotus_wallpaper.jpg );background-size:cover;}*/
 
         a{text-decoration:none;}
@@ -145,7 +147,7 @@
 <header role="banner">
 
 </header>
-<div id="logo"><a id="open-nav" href="#" onclick="openNav()">&#9776;</a><center><a href="https://www.shamayoga.org.uk"><img src="https://lh3.googleusercontent.com/-uxk3bsCn-Uk/WxgCKv_X-jI/AAAAAAAAA8w/rGdoNqMRGsAXiO1DTk1kYJCjDwpICuEBgCJoC/s340-e30/newShamalogo.png"/></a></center></div>
+<div id="logo"><a id="open-nav" href="#" onclick="openNav()">&#9776;</a><center><a href="https://www.shamayoga.org.uk"><img src="https://lh3.googleusercontent.com/-j_6h0EYrYjo/Wx7fXeFFjeI/AAAAAAAABI8/ii74UV4utsQ28QBzv_SzAy_OPgY8Igd7wCJoC/s340-e30/redshamalogo.png"/></a></center></div>
 
     {% include overlay-nav.html %}
    
