--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -111,7 +111,7 @@
         }
 
         @media only screen and (max-width: 768px) {
-            .home-page{background-image:url(http://www.clipular.com/c/6340060367290368.png?k=YYCfRwH_c2CumZ7iAoOZ8uIqgjw);background-size:cover;}
+            .home-page{background-image:url(https://lh3.googleusercontent.com/-Gyj2TjNZPSM/Wx7ZPhObUfI/AAAAAAAABIQ/SJJMVF_OIo0Lo9nYSmMSL_QdaRfWwz9NwCJoC/w1200-e30/bluecloudsLighter.png);background-size:cover;}
         }
 
         @media only screen and (max-width: 600px) {
