--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -2,7 +2,7 @@
 <body class='home-page' ></body>
     <style>
 
-        .home-page{background-image:url(https://lh3.googleusercontent.com/-Gyj2TjNZPSM/Wx7ZPhObUfI/AAAAAAAABIQ/SJJMVF_OIo0Lo9nYSmMSL_QdaRfWwz9NwCJoC/w1200-e30/bluecloudsLighter.png);background-size:cover;}
+        .home-page{background-image:url(https://lh3.googleusercontent.com/-4bS624PYUhk/Wx7XExzBGEI/AAAAAAAABHw/2GOtXRXm6RsDzPrMVGb1I-QXYjp5Ey1oACJoC/w1200-e30/bluebackground.gif);background-size:cover;}
         
         /*http://www.clipular.com/c/6340060367290368.png?k=YYCfRwH_c2CumZ7iAoOZ8uIqgjw */
             /*url(https://lh3.googleusercontent.com/-unZWJEV4FN4/Wx5VOFldD5I/AAAAAAAABB4/WIn-8Nt8FuYLPpSfRH2jIBPNgC-bKuZzgCJoC/w1000-e30/lotus_wallpaper.jpg );background-size:cover;}*/
@@ -111,7 +111,7 @@
         }
 
         @media only screen and (max-width: 768px) {
-            .home-page{background-image:url(https://lh3.googleusercontent.com/-Gyj2TjNZPSM/Wx7ZPhObUfI/AAAAAAAABIQ/SJJMVF_OIo0Lo9nYSmMSL_QdaRfWwz9NwCJoC/w1200-e30/bluecloudsLighter.png);background-size:cover;}
+            .home-page{background-image:url(https://lh3.googleusercontent.com/-4bS624PYUhk/Wx7XExzBGEI/AAAAAAAABHw/2GOtXRXm6RsDzPrMVGb1I-QXYjp5Ey1oACJoC/w1200-e30/bluebackground.gif);background-size:cover;}
         }
 
         @media only screen and (max-width: 600px) {
