logo bottom margin

--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -9,6 +9,8 @@
 
         a{text-decoration:none;}
 
+        #logo{margin-bottom: 30px;}
+
         .list {
         padding-left: 0;
         list-style: none;
