background on circle/square element fpage

--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -21,7 +21,7 @@
         }
           .circle {
             flex: 1;
-            background:none;
+            background: rgba(255,255,255,0.15);
             position:relative;
             xborder-radius: 50%;
             margin: 5px;
