--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -9,7 +9,7 @@
 
         a{text-decoration:none;}
 
-        #logo{margin-bottom: 30px;}
+        #logo{margin: 30px 0px;}
 
         .list {
         padding-left: 0;
