--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -16,7 +16,7 @@
     <div class="content-header">
     <h1>
     <a class="btn btn-default fa fa-bars" href="#" id="menu-toggle"><i class="icon-reorder"></i></a>
-    <img class="photo-right" src="//lh3.googleusercontent.com/-uxk3bsCn-Uk/WxgCKv_X-jI/AAAAAAAAA8w/rGdoNqMRGsAXiO1DTk1kYJCjDwpICuEBgCJoC/s340/newShamalogo.png">
+    <img class="photo-right" src="https://lh3.googleusercontent.com/-OP7xYhjpzKM/Wx7ihvEyKlI/AAAAAAAABJs/_GLTn9FjbKcRnZBbwFTHYIMoAQtW9sIkwCJoC/s340-e30/redshamalogo.png">
     </h1>
     </div>
     <!-- Keep all page content within the page-content inset div! -->
