--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -16,7 +16,7 @@
     <div class="content-header">
     <h1>
     <a class="btn btn-default fa fa-bars" href="#" id="menu-toggle"><i class="icon-reorder"></i></a>
-    <img class="photo-right" src="https://lh3.googleusercontent.com/-OP7xYhjpzKM/Wx7ihvEyKlI/AAAAAAAABJs/_GLTn9FjbKcRnZBbwFTHYIMoAQtW9sIkwCJoC/s340-e30/redshamalogo.png">
+    <img class="photo-right" src="https://lh3.googleusercontent.com/-QlSQ4-vrBxo/WyEQhkOHniI/AAAAAAAABOw/VHf8kxvD3r8aOFZBDXVUKssNya1lUfafQCL0BGAs/w400-e30/bigshamalogoorange.png"/>
     </h1>
     </div>
     <!-- Keep all page content within the page-content inset div! -->
