--- a/_layouts/testhome.html
+++ b/_layouts/testhome.html
@@ -2,15 +2,16 @@
 <body class='home-page' ></body>
     <style>
 
-        .home-page{background-image:url(https://lh3.googleusercontent.com/-IztaMfWwRL4/Wx941gpnajI/AAAAAAAAWeU/GKnfC1COVzkrA53JChFItqwpytXyHMypgCJoC/s1200-e30/a.jpg);background-size:cover;}
-            /*https://lh3.googleusercontent.com/-4bS624PYUhk/Wx7XExzBGEI/AAAAAAAABHw/2GOtXRXm6RsDzPrMVGb1I-QXYjp5Ey1oACJoC/w1200-e30/bluebackground.gif);background-size:cover;}*/
+        .home-page{background-image:url(https://lh3.googleusercontent.com/-4bS624PYUhk/Wx7XExzBGEI/AAAAAAAABHw/2GOtXRXm6RsDzPrMVGb1I-QXYjp5Ey1oACJoC/w1200-e30/bluebackground.gif);background-size:cover;}
         
         /*http://www.clipular.com/c/6340060367290368.png?k=YYCfRwH_c2CumZ7iAoOZ8uIqgjw */
             /*url(https://lh3.googleusercontent.com/-unZWJEV4FN4/Wx5VOFldD5I/AAAAAAAABB4/WIn-8Nt8FuYLPpSfRH2jIBPNgC-bKuZzgCJoC/w1000-e30/lotus_wallpaper.jpg );background-size:cover;}*/
 
         a{text-decoration:none;}
+        img {max-width: 100%;height: auto;}
 
-        #logo{margin-bottom: 30px;}
+        #logo{margin: 30px 0px;}
+        #logo img {max-width: 70%;height: auto;}
 
         .list {
         padding-left: 0;
@@ -22,10 +23,11 @@
         }
           .circle {
             flex: 1;
-            background:none;
+            background: rgba(255,255,255,0.15);
             position:relative;
             xborder-radius: 50%;
-            margin: 5px;
+            /*margin: 5px;*/
+            margin:5px 5px 40px 5px;
           }
           .circle:before {
             content: "";
@@ -34,13 +36,14 @@
           }
         
         .list li div{
-        color: 	rgb(233, 149, 22)/*#150DD3*/;
+        color: 	rgb(253, 134, 19)/*#150DD3*/;
         font-family: Arial, Helvetica, sans-serif;    
-        font-size: 14px;
+        font-size: 18px;
         text-align:center;
         font-weight: 800;
         position: absolute;
-        width: 100%;
+        width: 100%;    
+        margin-bottom: 40px;
 
         background: rgba(255,255,255,0.75);
         padding: 4px;
@@ -52,7 +55,7 @@
 
         #wrapper {
         padding-left: 0;
-        max-width: 1000px;
+        max-width: 1200px;
         margin: auto;
         }
         
@@ -63,28 +66,37 @@
             top: 20px;
         }
         #logo a{
-            color: rgb(233, 149, 22);
+            color: rgb(252, 220, 149);
             text-decoration:none;
             font-weight:bold;
         }
-        h1{margin-top:20px;text-align:center;
-            color:rgb(233, 149, 22);
-            text-shadow: 1px 1px #000;
+        h1{
         }
         #roots{
-            margin-top:40px;
-            padding:24px;
-            -webkit-column-count: 2; /* Chrome, Safari, Opera */
-            -moz-column-count: 2; /* Firefox */
-            column-count: 2;
-            -webkit-column-gap: 40px; /* Chrome, Safari, Opera */
-            -moz-column-gap: 40px; /* Firefox */
-            column-gap: 40px;
-            font-size: 18px;
-            color:white;
-            font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+            padding:30px 75px 75px 75px;
+            margin: 100px 0px 40px 0px;;
             background-color: rgba(255,255,255,0.25);
-            border: 3px solid #e99516;
+            border: 3px solid rgb(253, 134, 19);
+        }
+        #roots-text{
+         
+        -webkit-column-count: 2; /* Chrome, Safari, Opera */
+        -moz-column-count: 2; /* Firefox */
+        column-count: 2;
+        -webkit-column-gap: 40px; /* Chrome, Safari, Opera */
+        -moz-column-gap: 40px; /* Firefox */
+        column-gap: 40px;
+        font-size: 22px;
+        color:white;
+        font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        }
+        #roots h1{
+            font-weight: bold;
+            font-size: 5em;
+            letter-spacing:0.13em;
+            /*margin-top:20px;*/
+            color:rgb(253, 134, 19);
+            text-shadow: 1px 1px #000;
         }
         #shama-offer{
             list-style: none;
@@ -98,11 +110,12 @@
 
         #shama-offer li{
             background-color: rgba(255,255,255,0.25);
-            border: 3px solid #e99516;
+            border: 3px solid rgb(253, 134, 19);
             padding: 24px;
             font-size: 18px;
             color:white;
             font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+            margin-bottom:20px;
         }
         svg{fill:red;}
         #shama-offer li::before{
@@ -114,15 +127,30 @@
         }
 
         @media only screen and (max-width: 768px) {
-            .home-page{background-image:url(https://lh3.googleusercontent.com/-IztaMfWwRL4/Wx941gpnajI/AAAAAAAAWeU/GKnfC1COVzkrA53JChFItqwpytXyHMypgCJoC/s1200-e30/a.jpg);background-size:cover;}
+            #roots h1{
+                font-size: 3em;
+                letter-spacing:0.13em;
+            }
+            #open-nav{
+                font-size: 36px;
+                left: 12px;
+                top: 12px;
+            }
+            .home-page{background-image:url(https://lh3.googleusercontent.com/-4bS624PYUhk/Wx7XExzBGEI/AAAAAAAABHw/2GOtXRXm6RsDzPrMVGb1I-QXYjp5Ey1oACJoC/w1200-e30/bluebackground.gif);background-size:cover;}
         }
 
         @media only screen and (max-width: 600px) {
-     
-            #roots{
+            #roots{padding:20px;}
+            #roots h1{
+                font-size: 2.5em;
+                letter-spacing:0.12em;
+                text-align:center;
+            }
+            #roots-text{
                 -webkit-column-count: 1; /* Chrome, Safari, Opera */
                 -moz-column-count: 1; /* Firefox */
                 column-count: 1;
+                font-size: 18px;
             }
             #shama-offer{
 
@@ -130,6 +158,7 @@
                 grid-gap: 48px;
             }
         @media only screen and (max-width: 480px) {
+            img {max-width: 80%;height: auto;}
         .list{grid-template-columns: 1fr;}
         .list li div{font-size: 11px;}
         .xtop{top:77%;}
@@ -150,7 +179,8 @@
 <header role="banner">
 
 </header>
-<div id="logo"><a id="open-nav" href="#" onclick="openNav()">&#9776;</a><center><a href="https://www.shamayoga.org.uk"><img src="https://lh3.googleusercontent.com/-OP7xYhjpzKM/Wx7ihvEyKlI/AAAAAAAABJs/_GLTn9FjbKcRnZBbwFTHYIMoAQtW9sIkwCJoC/s340-e30/redshamalogo.png"/></a></center></div>
+<div id="logo"><a id="open-nav" href="#" onclick="openNav()">&#9776;</a><center><a href="https://www.shamayoga.org.uk">
+    <img src="https://lh3.googleusercontent.com/-QlSQ4-vrBxo/WyEQhkOHniI/AAAAAAAABOw/VHf8kxvD3r8aOFZBDXVUKssNya1lUfafQCL0BGAs/s0-e30/bigshamalogoorange.png"/></a></center></div>
 
     {% include overlay-nav.html %}
    
