--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,16 +5,13 @@
 <title>{{page.title}}</title>
 <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'/>
 <meta content='jekyll' name='generator'/>
-<link href="https://www.shamayoga.org.uk/favicon.ico" rel='icon' type='image/x-icon' />
-<link href="https://www.shamayoga.org.uk/" rel='canonical' />
-<link rel="alternate" type="application/atom+xml" title="shamayoga - Atom" href="https://www.shamayoga.org.uk/feeds/posts/feed-atom.xml" />
-<link rel="alternate" type="application/rss+xml" title="shamayoga - RSS" href="https://www.shamayoga.org.uk/feeds/posts/feed.rss" />
-<!-- see https://jsonfeed.org/version/1 for json feed format -->
-<link rel="openid.server" href="https://www.blogger.com/openid-server.g" />
-<link rel="openid.delegate" href="https://www.shamayoga.org.uk/" />
+<link href="{{site.url}}/favicon.ico" rel='icon' type='image/x-icon' />
+<link href="{{site.url}}/" rel='canonical' />
+<link rel="alternate" type="application/atom+xml" title="shamayoga - Atom" href="{{site.url}}/feeds/posts/feed-atom.xml" />
+<link rel="alternate" type="application/rss+xml" title="shamayoga - RSS" href="{{site.url}}/feeds/posts/feed.rss" />
 <!--Can't find substitution for tag [blog.ieCssRetrofitLinks]-->
-<meta content='http://www.shamayoga.org.uk/' property='og:url'/>
-<meta content='shamayoga' property='og:title'/>
+<meta content='{{ page.url }}' property='og:url'/>
+<meta content='{{page.title}}' property='og:title'/>
 <meta content='' property='og:description'/>
 <link href="https://fonts.googleapis.com/css?family=Skranji:400,700" rel="stylesheet"> 
 <link rel="stylesheet" href="{{ site.url }}/css/styles.css">
