--- a/_layouts/testhome.html
+++ b/_layouts/testhome.html
@@ -66,7 +66,7 @@
             top: 20px;
         }
         #logo a{
-            color: rgb(172, 48, 31);
+            color: rgb(216, 22, 59);
             text-decoration:none;
             font-weight:bold;
         }
@@ -76,7 +76,7 @@
             padding:30px 75px 75px 75px;
             margin: 100px 0px 40px 0px;;
             background-color: rgba(255,255,255,0.25);
-            border: 3px solid rgb(172, 48, 31);
+            border: 1px solid rgb(216, 22, 59);
         }
         #roots-text{
          
@@ -95,8 +95,8 @@
             font-size: 5em;
             letter-spacing:0.13em;
             /*margin-top:20px;*/
-            color:rgb(172, 48, 31);
-            text-shadow: 1px 1px #000;
+            color:rgb(216, 22, 59);
+            text-shadow: 1px 1px rgb(252, 220, 149);
         }
         #shama-offer{
             list-style: none;
@@ -110,7 +110,7 @@
 
         #shama-offer li{
             background-color: rgba(255,255,255,0.25);
-            border: 3px solid rgb(172, 48, 31);
+            border: 1px solid rgb(216, 22, 59);
             padding: 24px;
             font-size: 18px;
             color:white;
@@ -180,7 +180,7 @@
 
 </header>
 <div id="logo"><a id="open-nav" href="#" onclick="openNav()">&#9776;</a><center><a href="https://www.shamayoga.org.uk">
-    <img src="https://lh3.googleusercontent.com/-bkIauxWXCqw/WyEIl5ZeubI/AAAAAAAABOA/egPnxaKt2w0UuqXIRWpB_ZCgICTBzL5QgCJoC/s0-e30/bigshamalogo.png"/></a></center></div>
+    <img src="https://lh3.googleusercontent.com/-gRtSWv6JlfI/WyTMZuSkuTI/AAAAAAAABUA/Xn-P0SMezWkxKuOqd0mlfkJEeJEiDPDawCJoC/s0-e30/yellowshadowlogo.png"/></a></center></div>
 
     {% include overlay-nav.html %}
    
