--- a/_layouts/testhome.html
+++ b/_layouts/testhome.html
@@ -67,7 +67,7 @@
         }
         #logo a{
             color: rgb(216, 22, 59);
-            text-shadow: 1px 1px rgb(252, 220, 149)
+            text-shadow: 1px 1px rgb(252, 220, 149);
             text-decoration:none;
             font-weight:bold;
         }
