--- a/_layouts/testhome.html
+++ b/_layouts/testhome.html
@@ -77,7 +77,7 @@
             padding:30px 75px 75px 75px;
             margin: 100px 0px 40px 0px;;
             background-color: rgba(255,255,255,0.25);
-            border: 1px solid rgb(216, 22, 59);
+            border: 1px solid rgb(252, 220, 149));
         }
         #roots-text{
          
@@ -111,7 +111,7 @@
 
         #shama-offer li{
             background-color: rgba(255,255,255,0.25);
-            border: 1px solid rgb(216, 22, 59);
+            border: 1px solid rgb(252, 220, 149);
             padding: 24px;
             font-size: 18px;
             color:white;
