--- a/_layouts/testhome.html
+++ b/_layouts/testhome.html
@@ -2,7 +2,7 @@
 <body class='home-page' ></body>
     <style>
 
-        .home-page{background-image:url(https://lh3.googleusercontent.com/-4bS624PYUhk/Wx7XExzBGEI/AAAAAAAABHw/2GOtXRXm6RsDzPrMVGb1I-QXYjp5Ey1oACJoC/w1200-e30/bluebackground.gif);background-size:cover;}
+        .home-page{background-image:url(http://www.herefordshiremeadows.org.uk/wp-content/uploads/2015/07/orchids_joans_hill2.jpg);background-size:cover;}
         
         /*http://www.clipular.com/c/6340060367290368.png?k=YYCfRwH_c2CumZ7iAoOZ8uIqgjw */
             /*url(https://lh3.googleusercontent.com/-unZWJEV4FN4/Wx5VOFldD5I/AAAAAAAABB4/WIn-8Nt8FuYLPpSfRH2jIBPNgC-bKuZzgCJoC/w1000-e30/lotus_wallpaper.jpg );background-size:cover;}*/
@@ -25,7 +25,7 @@
             flex: 1;
             background: rgba(255,255,255,0.15);
             position:relative;
-            xborder-radius: 50%;
+            border-radius: 50%;
             /*margin: 5px;*/
             margin:5px 5px 40px 5px;
           }
@@ -74,7 +74,7 @@
         h1{
         }
         #roots{
-            padding:30px 75px 75px 75px;
+            padding:95px 75px 75px 75px;
             margin: 100px 0px 40px 0px;;
             background-color: rgba(255,255,255,0.25);
             border: 1px solid rgb(252, 220, 149));
@@ -90,6 +90,7 @@
         font-size: 22px;
         color:white;
         font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        text-shadow: 1px 1px rgb(3, 3, 3);
         }
         #roots h1{
             font-weight: bold;
@@ -116,6 +117,7 @@
             font-size: 18px;
             color:white;
             font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+            text-shadow: 1px 1px rgb(3, 3, 3);
             margin-bottom:20px;
         }
         svg{fill:red;}
