move bubble labels down

--- a/_layouts/testhome.html
+++ b/_layouts/testhome.html
@@ -2,7 +2,7 @@
 <body class='home-page' ></body>
     <style>
 
-        .home-page{background-image:url(https://lh3.googleusercontent.com/-HhFbNmog-K8/WyWdwH4O2iI/AAAAAAAABZs/ZnKvGuGRJ9YxZi2hYaYny7wx2JztFcvsACJoC/s0-e30/meadow.jpg);background-size:cover;}
+        .home-page{background-image:url(https://lh3.googleusercontent.com/-4bS624PYUhk/Wx7XExzBGEI/AAAAAAAABHw/2GOtXRXm6RsDzPrMVGb1I-QXYjp5Ey1oACJoC/w1200-e30/bluebackground.gif);background-size:cover;}
         
         /*http://www.clipular.com/c/6340060367290368.png?k=YYCfRwH_c2CumZ7iAoOZ8uIqgjw */
             /*url(https://lh3.googleusercontent.com/-unZWJEV4FN4/Wx5VOFldD5I/AAAAAAAABB4/WIn-8Nt8FuYLPpSfRH2jIBPNgC-bKuZzgCJoC/w1000-e30/lotus_wallpaper.jpg );background-size:cover;}*/
@@ -42,9 +42,9 @@
         text-align:center;
         font-weight: 800;
         position: absolute;
+        top: 103%;
         width: 100%;    
         margin-bottom: 40px;
-
         background: rgba(255,255,255,0.75);
         padding: 4px;
         xborder-radius: 50px 50px;
